kubernetes/infrastructure/configs/kyverno/disable-default-sa-automount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disable-default-sa-automount
  annotations:
    policies.kyverno.io/title: Disable Default ServiceAccount Automount
    policies.kyverno.io/category: CIS
    policies.kyverno.io/description: >-
      Disables automatic mounting of the default service account token in all
      namespaces, satisfying CIS Kubernetes Benchmark requirement 5.1.6.
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: disable-automount
      match:
        any:
          - resources:
              kinds: [ServiceAccount]
              names: [default]
      mutate:
        targets:
          - apiVersion: v1
            kind: ServiceAccount
            name: default
        patchStrategicMerge:
          automountServiceAccountToken: false
